--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <header class="cabecalho">
             <section> 
                 <h1>Bem-vindo(a) ao Teen Job!</h1>
-                <p>Encontre o emprego dos seus sonhos e comece sua carreira!</p>
+                <p>Encontre o emprego dos seus sonhos e comece sua carreira.</p>
             </section>
             <div class="center">
                 <img src="./img/teen-job.jpeg"></img>
