alteracao do favicon

--- a/Telalogin.html
+++ b/Telalogin.html
@@ -6,7 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/8c5577473e.js" crossorigin="anonymous"></script>
-
+    <link rel="icon" href="./img/globe-solid.svg" type="image/x-icon">
     <style>
         body{
             font-family: Arial, sans-serif;
