--- a/curriculo.html
+++ b/curriculo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Montagem de Currículo</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" href="./img/globe-solid.svg" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
