--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Teen Job</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/8c5577473e.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="./img/globe-solid.svg" type="image/x-icon">
 </head>
 <body>
     <div class="container">
